# boost_vs_posix

./: .gitignore  README.md
Logger/: CMakeLists.txt
Logger/include/: logger.h
Logger/lib/: README.md
Logger/src/: logger.cpp
Logger/test/: test_logger.cpp
MessageQueue/: CMakeLists.txt
MessageQueue/include/: MessageIF.h  boost_queues.h  posix_queues.h
MessageQueue/src/: boost_queues.cpp  posix_queues.cpp
MessageQueue/test/: test_boost_queues.cpp  test_posix_queues.cpp
include/: README.md
lib/: README.md
